# cloud-box

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  go.mod  go.sum  main.go
backend/config/: main.json
backend/docs/: api.md
backend/source/config/: interfaces.go  model.go  repository.go
backend/source/controllers/box/: box.go
backend/source/controllers/presenter/: const.go  presenter.go
backend/source/controllers/registration/: registration.go  registration_test.go
backend/source/controllers/session/: session.go
backend/source/meta/interfaces/: repositories.go  response.go
cbox/: Cargo.toml  Dockerfile  README.md
cbox/docs/: api.md  scripts.md
cbox/scripts/: package-lock.json  package.json  run.js  tunnel.js
cbox/src/: commands.rs  controllers.rs  decorators.rs  main.rs  services.rs
cbox/src/commands/: create_file.rs  create_folder.rs  delete_file.rs  delete_folder.rs  factory.rs  get_disks.rs  get_file.rs  get_folder.rs  rename.rs
cbox/src/controllers/: handlers.rs  middleware.rs  presenter.rs  routes.rs  tests.rs
cbox/src/controllers/tests/: create_folder.rs  delete_file.rs  delete_folder.rs  get_disks.rs  get_file.rs  get_folder.rs  rename_file.rs  rename_folder.rs  utils.rs
cbox/src/decorators/: commands_loggers.rs
cbox/src/models/: commands.rs  responses.rs
cbox/src/services/: auth.rs  disk_path.rs
cbox/src/settings/: env.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.test.js  index.js
frontend/src/containers/: index.js
frontend/src/store/: index.js
(+93 files in other folders)
