[package]
name = "cbox"
version = "0.1.0"
authors = ["ilya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whoami = "0.1.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
simple_logger = "1.11.0"
